--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -2,6 +2,8 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+  /* max-height: 100vh; */
+  /* overflow-y: auto; */
 }
 
 .home-header {
@@ -114,4 +116,30 @@
 .leader-details p {
   font-size: 16px;
   color: #777;
+}
+
+.home-scroll-container {
+  max-height: calc(100vh - 80px); 
+  overflow-y: scroll; 
+}
+.banner {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 0;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.fact {
+  font-size: 18px;
+  animation: scroll 20s linear infinite; /* can adjust animation duration if you want to */
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
